--- a/templates/blog-page.html
+++ b/templates/blog-page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<p><a href="{{ get_url(path='/')}}">Home</a></p>
 <h1 class="title">
   {{ page.title }}
 </h1>
