--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <h1 class="title">
-  This is my blog made with Zola.
+  Welcome to Danno's Blog.
 </h1>
+<p>Click a link below read some of my writing.</p>
+<ul>
+  <p><a href="{{ get_url(path='@/blog/_index.md') }}">Research and programming</a></p>
+</ul>
 {% endblock content %}
