added cool background

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <h1 class="title">
   Welcome to Danno's Blog.
 </h1>
-<p>Click a link below read some of my writing.</p>
+<p style="background-image: url('static/starbg.gif');">Click a link below read some of my writing.</p>
 <ul>
   <p><a href="{{ get_url(path='@/blog/_index.md') }}">Research and programming</a></p>
 </ul>
