--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-image: url('/starbg.gif'); height: 100vh;">
 
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,7 @@
 
 <body>
   <sections class="section">
-    <div class="container">
+    <div class="container" style="background-color: white;">
       {% block content %} {% endblock %}
     </div>
   </section>
