added sparkly horse

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Danno's Blog</title>
+  <title>Danno's World</title>
 </head>
 
 <body>
@@ -12,6 +12,9 @@
       {% block content %} {% endblock %}
     </div>
   </section>
+  <div>
+  <img src="/metalhorse.gif">
+  </div>
 </body>
 
 </html>
