--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="title">
-  Welcome to Danno's Blog.
+  Welcome to Danno's World.
 </h1>
 <p style="background-image: url('static/starbg.gif');">Click a link below read some of my writing.</p>
 <ul>
