--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,11 @@
   <sections class="section">
     <div class="container">
       {% block content %} {% endblock %}
+    <img class="horse-stack" style="transform: scaleX(-1)" src="/flyhorse.gif">
+    <img class="horse-stack" src="/metalhorse.gif">
+    <img class="horse-stack" src="/flyhorse.gif">
     </div>
   </section>
-  <div>
-  <img src="/metalhorse.gif">
-  </div>
 </body>
 
 </html>
