--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,8 +3,13 @@ $primary-color: white
 * 
 	color: $primary-color
 
-.container
+.title-content
 	text-align: center
+
+.post-content
+	width: 70vw
+	margin: auto
+	background-color: RGB(18, 2, 37, 0.5) 
 
 .horse-stack
 	display: block
