--- a/templates/blog-page.html
+++ b/templates/blog-page.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p><a href="{{ get_url(path='/')}}">Home</a></p>
+<a href="{{ get_url(path='/')}}"><img class="horse-stack" src="/homehorse.gif"></a>
+<div class="container title-content">
 <h1 class="title">
   {{ page.title }}
 </h1>
 <p class="subtitle"><strong>{{ page.date }}</strong></p>
+</div>
+<div class="container post-content">
 {{ page.content | safe }}
+</div>
 {% endblock content %}
